# VITS-PaddlePaddle

./: .gitignore  README.md  infer.py  preprocess_data.py  requirements.txt  setup.py  train.py
configs/: config.yml
ppvits/: predict.py  trainer.py
ppvits/data_utils/: collate_fn.py  mel_processing.py  reader.py  sampler.py
ppvits/models/: attentions.py  commons.py  losses.py  models.py  modules.py  transforms.py
ppvits/text/: __init__.py  cantonese.py  cleaners.py  shanghainese.py
ppvits/utils/: utils.py
tools/monotonic_align_paddle/: LICENSE.md  PKG-INFO  README.md  pyproject.toml  setup.py
tools/monotonic_align_paddle/src/: core.c  core.pyx
tools/monotonic_align_paddle/src/monotonic_align_paddle/: __init__.py
